# ten_finish_words

./: .dockerignore  Cargo.toml  Dockerfile  README.md  spec.yaml
configuration/: base.yaml  production.yaml
migrations/: 20251014135736_create_subscriptions_table.sql  20251019130701_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  subscriptions.rs  words.rs
tests/: health_check.rs
